<resources>
    <string name="app_name">Photo Catalog</string>
    <string name="title_activity_add_new_item">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="desc_label">Label</string>
    <string name="title_activity_new_item_activity">NewItemActivityActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_item">New Item</string>
    <string name="desc_desc">Description</string>
    <string name="button_text">Create</string>
    <string name="undo">OK</string>
    <string name="todo">TODO</string>
    <string name="decs_content">Image_item</string>
    <string name="icon_home">Home</string>
    <string name="item_about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="item_addItem">Add Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_about">Додаток \"Фото-каталог\" містить різні можливості, такі як: додавання фотографій, ділитися з ними...</string>
</resources>