<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:theme="@style/AppTheme">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/icon_home" />
        <item
            android:id="@+id/addItem"
            android:icon="@drawable/ic_action_add"
            android:title="@string/item_addItem" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_action_about"
            android:title="@string/item_about" />
        <item
            android:id="@+id/placeholder"
            android:icon="@drawable/ic_action_placeholder"
            android:title="Placeholder"/>
        <item
            android:id="@+id/video_viewer"
            android:icon="@drawable/video_img"
            android:title="VideoViewer"/>
    </group>
</menu>